# template-flask

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter.json
{{cookiecutter.application_name}}/: .editorconfig  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  mise.toml  pyproject.toml  requirements.txt
{{cookiecutter.application_name}}/src/{{cookiecutter.application_name}}/: __init__.py  main.py
{{cookiecutter.application_name}}/src/{{cookiecutter.application_name}}/models/: __init__.py  todo.py
{{cookiecutter.application_name}}/src/{{cookiecutter.application_name}}/views/: __init__.py
{{cookiecutter.project_slug}}/: Dockerfile  Makefile  mise.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/common/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/views/: todo.py
